samples/_failures_safe/1761204798_20e871_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79cd393e.c: In function ‘geometry_create_cube’:
./samples/SAFE/__tmp_79cd393e.c:134:5: error: expected identifier at end of input
  134 |     geom.vertices[0].
      |     ^~~~
./samples/SAFE/__tmp_79cd393e.c:134:5: error: expected declaration or statement at end of input
